# jeevana-ai-document-intelligence-assistant

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  health.py
backend/app/api/v1/: __init__.py  documents.py  router.py
backend/app/application/: __init__.py
backend/app/application/services/: __init__.py
backend/app/application/use_cases/: __init__.py  delete_document.py  process_document.py  upload_document.py
backend/app/core/: __init__.py  logging.py  security.py
backend/app/core/config/: __init__.py  settings.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  document.py  document_chunk.py
backend/app/domain/exceptions/: __init__.py
backend/app/domain/interfaces/: __init__.py  embeddings.py  extraction.py  queue.py  repositories.py  storage.py
backend/app/domain/services/: __init__.py  text_chunker.py
backend/app/domain/value_objects/: __init__.py  document_status.py  extraction_result.py  file_type.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/database/: __init__.py  base.py  models.py  session.py
backend/app/infrastructure/external_services/: __init__.py  embeddings.py
backend/app/infrastructure/extraction/: __init__.py  docx_text.py  factory.py  image_ocr.py  pdf.py  pdf_ocr.py  pdf_text.py
backend/app/infrastructure/repositories/: __init__.py  in_memory.py  postgres.py  postgres_chunk.py
backend/app/infrastructure/storage/: __init__.py  local_storage.py
backend/app/workers/: __init__.py  celery_app.py  queue.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  0001_initial_schema.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_document_retrieval.py  test_document_upload.py
backend/tests/integration/: conftest.py  test_local_storage.py  test_postgres_chunk_repository.py  test_postgres_repository.py  test_worker_session.py
backend/tests/unit/: test_health_endpoint.py  test_security.py  test_settings.py
backend/tests/unit/application/: test_delete_document.py  test_process_document.py  test_upload_document.py
backend/tests/unit/domain/: test_document.py  test_document_chunk.py  test_document_status.py  test_file_type.py  test_text_chunker.py
backend/tests/unit/infrastructure/: test_in_memory_repository.py
backend/tests/unit/infrastructure/extraction/: test_pdf_detection_and_factory.py  test_strategies.py
docs/: api-contract.md  architecture.md  database-design.md  deployment-guide.md  development-roadmap.md  glossary.md  technology-decisions.md  testing-strategy.md
frontend/: .env.local.example  jest.config.js  jest.setup.ts  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/lib/: api.ts
