[project]
name = "document-intelligence-api"
version = "0.1.0"
description = "AI Document Intelligence Assistant — backend API"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nanepalli Jeevana" }]

# Runtime dependencies for the Phase 1 foundation only. Feature dependencies
# (OCR, embeddings, LLM clients, Redis/Celery) are added in the phase that uses
# them, keeping the install surface honest about what the code needs today.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",          # async PostgreSQL driver used by the app
    "psycopg2-binary>=2.9",   # sync driver used by Alembic migrations
    "alembic>=1.13",
    "bcrypt>=4.2",            # password hashing
    "pyjwt>=2.9",            # JWT encode/decode
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",           # required by FastAPI's TestClient
    "ruff>=0.7",            # linter + formatter
    "mypy>=1.13",           # static type checker
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --- Ruff: linting + formatting -------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# A pragmatic, widely-used rule set: pycodestyle errors/warnings (E, W),
# pyflakes (F), isort import ordering (I), bugbear (B), and pyupgrade (UP).
select = ["E", "W", "F", "I", "B", "UP"]

# --- mypy: static type checking -------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

# --- pytest ----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

# --- coverage --------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true
