[project]
name = "document-intelligence-api"
version = "0.1.0"
description = "AI Document Intelligence Assistant — backend API"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nanepalli Jeevana" }]

# Runtime dependencies for the Phase 1 foundation only. Feature dependencies
# (OCR, embeddings, LLM clients, Redis/Celery) are added in the phase that uses
# them, keeping the install surface honest about what the code needs today.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",          # async PostgreSQL driver used by the app
    "psycopg2-binary>=2.9",   # sync driver used by Alembic migrations
    "pgvector>=0.3",          # SQLAlchemy Vector type + pgvector support
    "celery[redis]>=5.4",     # async task queue (worker pipeline) + Redis broker
    "alembic>=1.13",
    "bcrypt>=4.2",            # password hashing
    "pyjwt>=2.9",            # JWT encode/decode
    "python-multipart>=0.0.12",  # required by FastAPI for file uploads
    # --- text extraction (Phase 2.3) ---
    "pdfminer.six>=20240706", # digital-PDF text extraction
    "python-docx>=1.1",       # DOCX text extraction
    "pytesseract>=0.3.13",    # OCR (needs the Tesseract system binary at runtime)
    "pdf2image>=1.17",        # render PDF pages to images (needs poppler at runtime)
    "pillow>=10.4",           # image handling for OCR
]

[project.optional-dependencies]
# The embedding model pulls in torch, which is large and lags new Python
# versions. It is kept separate so the core install (and CI) stays light; the
# worker container installs `.[ml]`.
ml = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",           # required by FastAPI's TestClient
    "pytest-asyncio>=0.24",  # run async unit tests
    "ruff>=0.7",            # linter + formatter
    "mypy>=1.13",           # static type checker
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --- Ruff: linting + formatting -------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# A pragmatic, widely-used rule set: pycodestyle errors/warnings (E, W),
# pyflakes (F), isort import ordering (I), bugbear (B), and pyupgrade (UP).
select = ["E", "W", "F", "I", "B", "UP"]

# --- mypy: static type checking -------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

# These OCR libraries ship no type stubs; we wrap them in thin, typed adapters,
# so we silence only their missing-stub noise rather than weakening type checking
# across the project.
[[tool.mypy.overrides]]
module = [
    "pytesseract.*",
    "pdf2image.*",
    "pgvector.*",
    "sentence_transformers.*",
    "celery.*",
]
ignore_missing_imports = true

# --- pytest ----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]
# Treat `async def test_*` as asyncio tests automatically (no per-test marker).
asyncio_mode = "auto"

# --- coverage --------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true
